--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,9 @@ KV_all_summaries.txt
 X_metrics_posttrauma.csv
 X_nominal_posttrauma.csv
 cybersecurity_summaries.txt
+_cybersecurity_summaries.txt
 lung_disease_summaries.txt
+_lung_disease_summaries.txt
 X_cybersecurity_intrusion_data.csv
 y_cybersecurity_intrusion_data.csv
 lung_disease_summaries.txt
