--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ X_metrics_posttrauma.csv
 X_nominal_posttrauma.csv
 cybersecurity_summaries.txt
 _cybersecurity_summaries.txt
+_cybersecurity_nom_summaries.txt
 lung_disease_summaries.txt
 _lung_disease_summaries.txt
 X_cybersecurity_intrusion_data.csv
