--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ lung_disease_summaries.txt
 _lung_disease_summaries.txt
 X_cybersecurity_intrusion_data.csv
 X_cybersecurity_metrics.csv
-X_cybersecurity_nominal.csv
+X_cybersecurity_nom.csv
 y_cybersecurity_intrusion_data.csv
 lung_disease_summaries.txt
 X_lung_disease_data.csv
